[package]
name = "quasar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tokio-stream = "0.1"
rand_chacha = "0.3"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
